# MLOps_Wafer_Faults

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
